<resources>
    <string name="app_name">Sales Application :::</string>
    <string name="nama_outl">Nama Outl</string>
    <string name="hint_nama_outlt"></string>
    <string name="pemilik">Pemilik</string>
    <string name="tgl_lahir">Tgl Lhr</string>
    <string name="kontak">Kontak</string>
    <string name="email">Email</string>
    <string name="telp1">Telp1</string>
    <string name="telp2">Telp2</string>
    <string name="hp1">Hp1</string>
    <string name="hp2">Hp2</string>
    <string name="group">Group Outl</string>
    <string name="tipe_outl">Tipe Outl</string>
    <string name="format_tgl">dd/mm/yyyy</string>
    <string name="format_email">xxxx@.xxx.com</string>
    <string name="format_telp">xxxxxxxxxxxx</string>
    <string name="format_hp">xxxx-xxxxxxxx</string>
    <string name="button_kirim">KIRIM</string>
    <string name="jenis_outl">Jenis Outl</string>
    <string name="rayon">Rayon</string>
    <string name="rute">Rute</string>
    <string name="pasar">Pasar</string>
    <string name="lingkungan">Lingkungan</string>
    <string name="no_rek">NO Rek</string>
    <string name="bank">Bank</string>
    <string name="atas_nama">Rek Atas Nama :</string>
    <string name="email_salesfl">salesfajarlestari@gmail.com</string>
    <string name="bt_back">&lt;&lt;</string>
    <string name="user">User-ID :</string>    
    <string name="pwd">Password :</string>
    <string name="btmasuk">Login</string>
    <string name="batal_login">Batal</string>
    <string name="nama_cust">Nama</string>
    <string name="jenis_trans">Pembayaran :</string>
    <string name="kd_cust">Kode</string>
    <string name="kd_barang">Kode</string>
    <string name="nama_barang">Nama</string>
    <string name="qty1">Qty1</string>
    <string name="qty2">Qty2</string>
    <string name="qty3">Qty3</string>
    <string name="bt_simpan">Simpan</string>
    <string name="alamat_cust">Alamat</string>
    <string name="sama_dengan">:</string>
    <string name="kosong">Kosong</string>
    <string name="pencarian">Cari :</string>
    <string name="nama_sales">Sales</string>
    <string name="bt_add">Tambah</string>
    <color name="white">#FFFFFFFF</color>
    <string name="jml_order">Jml</string>
    <string name="kosong_number">0</string>
    <string name="coordin">Coordinat</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="setcoord">Set Coordinat</string>
    <string name="npwp">NPWP</string>
    <string name="no_npwp_seri">No NPWP Seri</string>
    <string name="nama_npwp">Nama NPWP</string>
    <string name="alamatnpwp">Alamat NPWP</string>
    <string name="opt_cash">Cash</string>
    <string name="opt_kredit">Kredit</string>
    <string name="jenis_noo">Jenis NOO</string>
    <string name="bt_next">&gt;&gt;</string>
    <string name="bt_cancel">Cancel</string>
    <string name="bt_next1">Next - Step 2 &gt;</string>
    <string name="bt_next2">Next - Step 3 &gt;</string>
    <string name="bt_back1">&lt; Back - Step 1</string>
    <string name="bt_next3">Next - Step 4 &gt;</string>
    <string name="bt_back3">&lt; Back - Step 3</string>
    <string name="bt_simpan_noo">Set Coord &amp; Save</string>
    <string name="ktp_sim">No KTP/SIM</string>
    <string name="nama_rek">Atas Nama</string>
    <string name="pemisah">.</string>
    <string name="no_pengajuan">No</string>
    <string name="konf">Konfirmasi aktivitas</string>
    <string name="bt_hapus">Hapus</string>
    <string name="bt_edit">Rubah</string>
    <string-array name="sarr_konfr_noo">
        <item>Rubah</item>
        <item>Hapus</item>
        <item>Cancel</item>
    </string-array>
        <string name="kelurahan">Area</string>
        <string name="nama_kelurahan">Kel</string>
        <string name="nama_kec">Kec</string>
        <string name="nama_kab">Kab</string>
        <string name="jdul_upload">Kirim/Upload Data</string>
        <string name="jdul_noo">Pengajuan NOO</string>
        <string name="jdul_coord">Set Coordinat Outlet</string>
        <string name="jdul_order">Order</string>
        <string name="bt_kirim">Kirim</string>
        <string name="cek_uncheck">C/Un-All</string>
        <string name="tnote">N O T E :</string>
        <string name="tnote_isi">Coordinat ini menentukan transaksi order selanjutnya, pastikan benar. Karna anda TIDAK DAPAT ORDER DILUAR AREA COORDINAT</string>
        <string name="tgl">Tgl</string>
        <string name="jdul_upl_order">Upload/Kirim Sales Order</string>
        <string name="jdul_upl_noo">Upload/Kirim NOO</string>
        <string name="jdul_upl_cust">Upload/Kirim Customer (Update)</string>
        <string name="stat_upl">Status</string>
        <string name="btbrowse">Cari Data</string>
        <string name="jdul_updatemaster">Update Data Master</string>
        <string name="lu_customer">1. Customer</string>
        <string name="lu_judul">DATA - DATA MASTER :</string>
        <string name="lu_customer2">2. Group Cust</string>
        <string name="lu_barang">3. Barang</string>
        <string name="lu_area">4. Area</string>
        <string name="lu_areasales">5. Area Sales</string>
        <string name="lu_pasar">6. Pasar</string>
        <string name="lu_other">9. Pendukung</string>
        <string name="bt_updatemas">Update master</string>
        <string name="bt_updatemas2">Update master &amp; Hapus All transaksi</string>
        <string name="lu_sales">7. Sales</string>
        <string name="namauser">Nama User :</string>
        <string name="namasales">Nama Sales :</string>
        <string name="jdul_utility">Utility</string>
        <string name="jdul_useradd">Tambah User</string>
        <string name="lu_kondisi">8. Kondisi</string>
        <string name="terkirim">Terkirim</string>
        <string name="psan_belm_lengkap">Data outlet belum lengkap silahkan isi data ini :</string>
        <string name="note_isi_lengkap">Note : Untuk Telp anda mengisi salah satu antara telp rumah atau Hp</string>
        <string name="jdul_lengkapi">Pelengkapan Data</string>
        <color name="blue">#3450E0</color>
        <color name="kuning">#F8FB23</color>
        <string name="judulprog">Sales Order</string>
        <string name="emptys"></string>
        <string name="depo">Cabang</string>
        <string name="kd_sales">Kd Sales</string>
        <string name="namauser_ud">Nama User</string>
        <string name="pwd_lu">Password</string>
        <string name="bt_addbylocal">Tambah (Via Local)</string>
        <string name="bt_add_viaserver">Tambah (Via Server)</string>

</resources>