<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/tbrow_view0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tnama_noo3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>

    <TableRow
        android:id="@+id/TableRow02"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white" >
    </TableRow>

    <TextView
        android:id="@+id/textView19"
        android:layout_width="75dp"
        android:layout_height="20dp"
        android:text="@string/npwp" />

    <EditText
        android:id="@+id/tnpwp_noo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/no_npwp_seri" />

    <EditText
        android:id="@+id/tnpwpseri_noo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/nama_npwp" />

    <EditText
        android:id="@+id/tnamanpwp_noo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/alamatnpwp" />

    <EditText
        android:id="@+id/talamatnpwp_noo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress" />

    <TableRow
        android:id="@+id/TableRow01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|right" >

        <Button
            android:id="@+id/bt_back3_noo"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:text="@string/bt_back3" />

        <Button
            android:id="@+id/bt_next3_noo"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:text="@string/bt_next3" />

        <Button
            android:id="@+id/btcancel_noo3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/bt_cancel" />
    </TableRow>

</LinearLayout>