<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.82"
        android:orientation="vertical" >

        <TableRow
            android:id="@+id/TableRow04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tnama_lengkp2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kosong"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" >
        </TableRow>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1.66"
                android:text="@string/psan_belm_lengkap" />
        </LinearLayout>

        <TableRow
            android:id="@+id/tbrow_view0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/telp1" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sama_dengan" />

            <EditText
                android:id="@+id/ttelp1_lengkp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/telp2" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sama_dengan" />

            <EditText
                android:id="@+id/ttelp2_lengkp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/hp1" />

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sama_dengan" />

            <EditText
                android:id="@+id/thp1_lengkp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView07"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/hp2" />

            <TextView
                android:id="@+id/TextView06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sama_dengan" />

            <EditText
                android:id="@+id/thp2_lengkp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </TableRow>

        <TextView
            android:id="@+id/TextView08"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ktp_sim" />

        <EditText
            android:id="@+id/tnoktp_lengkp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_isi_lengkap" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btsimpan_lengkp"
            android:layout_width="86dp"
            android:layout_height="wrap_content"
            android:text="@string/bt_simpan" />

        <Button
            android:id="@+id/btback_lengkp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_back" />
    </LinearLayout>

</LinearLayout>