<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout android:id="@+id/LinearLayout1sdet" >

        <TextView
            android:id="@+id/tuser_detail"
            android:layout_width="43dp"
            android:layout_height="wrap_content"
            android:text="@string/kd_cust" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sama_dengan" />

        <TextView
            android:id="@+id/tv_kdgroup_outl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kosong" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout1a"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="43dp"
            android:layout_height="wrap_content"
            android:text="@string/nama_cust" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sama_dengan" />

        <TextView
            android:id="@+id/tv_namagroup_outl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kosong" />
    </LinearLayout>

</TableLayout>